client/styles/contentHubComponent.scss
@import "variables";
@import "styles";


.contentHubComponent
{
  width: 500px;
  background-color: #CCCCCC;
  height: 100vh;
  overflow: hidden;

  .hubTitle
  {
    line-height: 100px;

    font-size: 30px;
    text-align: center;

    font-family: $ComfortRegular;
  }

  .hubContent
  {
    width: 95%;
    height: 100vh;

    grid-template-rows: 400px 100px 400px;
    font-size: 20px;
    font-family: $LatoMedium, sans-serif;

    display: grid;
    justify-items: right;

    padding: 0;

    background-color: white;

    .panelItem
    {
      margin-right: 28px;
      margin-top: 100px;

      .panelItemTitle
      {
        text-align: center;
      }

      .panelItemInfo
      {

        grid-template-columns: 50% 50%;
        font-size: 16px;
        font-family: $LatoLight, sans-serif;
        color: #4D4D4D;

        display: grid;

        padding: 0;

        .itemTitle
        {
          grid-row: 1;
          grid-column: 1;
        }

        .itemURL
        {
          grid-row: 2;
          grid-column: 1;

          .urlLink
          {
            text-decoration: none;
            color: #4D4D4D;
          }
        }

        .itemDate
        {
          grid-row: 3;
          grid-column: 1;
        }

        .itemPublisher
        {
          grid-row: 1;
          grid-column: 2;
        }

        .itemCount
        {
          grid-row: 2;
          grid-column: 2;
        }
      }
    }

    .openCloseBtn
    {
      cursor: pointer;
      display: grid;

      text-align: right;
      justify-items: right;

      width: 50px;
      margin-top: 50px;

      .arrowBtn
      {
        width: 50px;
      }

      .arrowBtnOpen
      {

      }
    }
  }
}

